@@ -6,6 +6,6 @@ DIST p7zip_4.58_src_all.tar.bz2 1948207 RMD160 2c31ab657275dc01d2d23c5de2327d5ee
 DIST p7zip_4.65_src_all.tar.bz2 2501418 RMD160 1749032c16e7c5afaa79bc123db33d61acc79eba SHA1 988f6ec63e93e6ec23492fd39e3b48a58fd695d1 SHA256 691cc9419a73a9348319f5b2c3ba2655471bee052c6c7fa57a226800c89ab07f
 EBUILD p7zip-4.57.ebuild 2543 RMD160 86a5f9d3c791581c20a235fd018710e299f951c4 SHA1 cef3ca8475d4fc6b547cea21902436a8755f99ea SHA256 9d8d2607111429bba9404bc47bfd5269e7bd1932fd2922848c2106d6700dc41a
 EBUILD p7zip-4.58.ebuild 2295 RMD160 9add600d07ed0a09c7635e63228308c64e4f7c85 SHA1 82047b843a085a013d78df472199ae5beedebad3 SHA256 2b9fb00903fd2350102a436b81fc1d435a4f6f671d96469c8f7472f70bf26c1d
-EBUILD p7zip-4.65.ebuild 3412 RMD160 b390c7d929a2a577928dad707eb62ee025df385c SHA1 e657301f4ed4aec11d68ef8c68d976c8e42069b6 SHA256 3a9f248e91011812b93a508f9e97cb9cf1132ac0e4a86b63bcfc4a6cf268c355
-MISC ChangeLog 13638 RMD160 b521f4e2d1c8072f2c9da94f1af317a4614dcf46 SHA1 84403a1d557119df0f3794a957435ec92f8cec1b SHA256 616b0a31e1295aa256588602f544638d9a14b7e7906403173e34980bda71c31f
+EBUILD p7zip-4.65.ebuild 3488 RMD160 acfe3ee53ccc14c3ed83b8577df793c5b901a1a9 SHA1 e0abeb5e555d4b1cded0c00d82f0db68b6ff3311 SHA256 a00d54db10e428448ed6a3df2f6478546d6065870e92b319be30c2fc1c827fa1
+MISC ChangeLog 13883 RMD160 d4d6bbeec0776f758d4db70d84802a7b9582520f SHA1 77cd4adeacb55e571e1bb2140c9f36a135c62609 SHA256 53b9d241a5bcb8ace45aa707cce9f75feaba107f806ebf785314d7bb4d5a450a
 MISC metadata.xml 300 RMD160 f76ed2c3264d6158356f9bdd432ca52a208df139 SHA1 bf620c137824a1fda712f420057baa45d65c730a SHA256 2f5efaa8198a11a57160098296e657540fd27abd43d6c388c820a070fc1d9da2
